--- a/Introduccion.tex
+++ b/Introduccion.tex
@@ -22,15 +22,20 @@
 	
 	
 	\pagenumbering{Roman}
-	\chapter*{INTRODUCCIÓN AL TEXTO}
+	\chapter*{\vspace*{-4\bigskipamount}INTRODUCCIÓN AL TEXTO}
 		Todas las estructuras musicales están basadas en estructuras matemáticas. Los elementos musicales de los que están compuestas las obras, como las notas, las dinámicas o los timbres, están agrupados en conjuntos, y, como tales, cumplen ciertas propiedades al relacionarse consigo mismos o con otros conjuntos.
 		
 		A lo largo de la historia, los compositores han ido descubriendo e inventando estas propiedades musicales en las piezas que componían; por ejemplo, desde consonancias y disonancias entre notas, hasta la jerarquía según el pulso en el que la nota se encuentra. Las matemáticas son capaces de describir las propiedades de estos elementos musicales como para cualquier otro conjunto matemático.
 		
-		Por ejemplo, las músicas serialistas se basan en la continua reiteración de secuencias de elementos musicales. Es decir, un compositor serialista tomará una secuencia ordenada de notas, dinámicas o timbres y la usará como único bloque constructivo de su obra. Puede, además, serializar más de un conjunto de elementos musicales, o incluso pretender serializar el máximo número de conjuntos -- lo que a mediados del siglo XX se llamaría serialismo integral. Estas músicas se pueden describir matemáticamente por medio de permutaciones y grupos.
+		Por ejemplo, las músicas serialistas se basan en la continua reiteración de secuencias de elementos musicales. Es decir, un compositor serialista tomará una secuencia ordenada de notas, dinámicas o timbres y la usará como único bloque constructivo de su obra. Puede, además, serializar más de un conjunto de elementos musicales, o incluso pretender serializar el máximo número de conjuntos. Estas músicas se pueden describir matemáticamente por medio de permutaciones y grupos.
 		
-		Son en estas estructuras en las que se centrará el presente texto, y más específicamente en el dodecafonismo, el primer sistema compositivo serialista. Se explicarán los fundamentos matemáticos que lo posibilitan, las razones históricas por las que surgió y los postulados que lo definieron, proponiendo ejemplos analizados. Además, se investigará sobre el valor artístico del serialismo mediante el uso de escalas no cromáticas en busca de consonancia.
-        % TODO
+		Son en estas estructuras en las que se centrará el presente texto, y más específicamente en el dodecafonismo, el primer sistema compositivo serialista. Se explicarán los fundamentos matemáticos que lo posibilitan y los postulados que lo definieron, extendiendo las definiciones habituales hacia el ámbito matemático. Además, se investigará sobre el valor artístico del serialismo mediante el uso de escalas no cromáticas en busca de consonancia.
+        
+        %Todas las estructuras musicales están basadas en estructuras matemáticas. A lo largo de la historia, los compositores han ido descubriendo e inventando estas propiedades musicales en las piezas que componı́an; las matemáticas son capaces de describir las propiedades de estos elementos musicales como para cualquier otro objeto matemático.
+        
+        %Por ejemplo, las músicas serialistas se basan en la continua reiteración de secuencias de elementos musicales. Es decir, un compositor serialista tomará una secuencia ordenada de notas, dinámicas o timbres y la usará como único bloque constructivo de su obra. Puede, además, serializar más de un conjunto de elementos musicales, o incluso pretender serializar el máximo número de conjuntos. Estas músicas se pueden describir matemáticamente por medio de permutaciones y grupos. 
+        
+        %Son en estas estructuras en las que se centrará el presente texto, y más especı́ficamente en el dodecafonismo, el primer sistema compositivo serialista. Se explicarán los fundamentos matemáticos que lo posibilitan y los postulados que lo definieron, extendiendo las definiciones habituales hacia el ámbito matemático. Además, se investigará sobre el valor artı́stico del serialismo mediante el uso de escalas no cromáticas en busca de consonancia.
         
     
     \renewcommand*\contentsname{\begin{LARGE}\textbf{Índice general}\end{LARGE}\vspace{-\bigskipamount}}
